Matcap Crash when using Material Nodes in Blender Internal? #39305

Closed
opened 2014-03-20 22:26:34 +01:00 by Terry Wallwork · 10 comments

System Information
Operating system and graphics card

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

I am using Blender 2.70 GIT Rev Blender-2.70-GIT2014-03-19-07-37-18-28c1a86
on a Fedora 20 Linux 64 Bit Box with an Intel 3000HD GFX Card

I have attached a Blend file which is using a Material Node texture.

If I switch the 3D Viewport to Solid Shading and then goto the
3D Viewport > Properties Region and activate the Mapcap option
Blender will crash.

I have attached my system-info.txt file and the Blend file that
causes the crash and a backtrace file and a video showing
the issue.

system-info.txt

TexturePaintTest.zip

MatcapCrash.webm

**System Information** Operating system and graphics card **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps I am using Blender 2.70 GIT Rev Blender-2.70-GIT2014-03-19-07-37-18-28c1a86 on a Fedora 20 Linux 64 Bit Box with an Intel 3000HD GFX Card I have attached a Blend file which is using a Material Node texture. If I switch the 3D Viewport to Solid Shading and then goto the 3D Viewport > Properties Region and activate the Mapcap option Blender will crash. I have attached my system-info.txt file and the Blend file that causes the crash and a backtrace file and a video showing the issue. [system-info.txt](https://archive.blender.org/developer/F81992/system-info.txt) [TexturePaintTest.zip](https://archive.blender.org/developer/F81993/TexturePaintTest.zip) [MatcapCrash.webm](https://archive.blender.org/developer/F81994/MatcapCrash.webm)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @TerryWallwork-1

Added subscriber: @TerryWallwork-1

Added subscriber: @ygtsvtr

Added subscriber: @ygtsvtr

i caNT reproduce the crash with your file on win 7 64 bit.

not on official build or #3406ef8

i caNT reproduce the crash with your file on win 7 64 bit. not on official build or #3406ef8

Added subscriber: @mont29

Added subscriber: @mont29

Can’t reproduce the crash either here (Debian64 testing, HD45730M)…

Can’t reproduce the crash either here (Debian64 testing, HD45730M)…
Sergey Sharybin self-assigned this 2014-03-21 09:34:17 +01:00

This issue was referenced by blender/blender-addons-contrib@1781928f9d

This issue was referenced by blender/blender-addons-contrib@1781928f9d720fa1dc4811afb69935b35aa89878

This issue was referenced by 1781928f9d

This issue was referenced by 1781928f9d720fa1dc4811afb69935b35aa89878

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1781928f9d.

Closed by commit 1781928f9d.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39305
No description provided.