Fix T39305: Matcap Crash when using Material Nodes in Blender Internal

This is a regression in d34d745, texture painting didn't set is_paint
if draw type < DT_SOLID which is weird.